fix: refactor button css rules for better alignment

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,9 @@ h2 {
     --_button-font-color: var(--button-font-color, var(--black));
     --_button-hover-background-color: var(--button-hover-background-color, var(--_button-background-color));
     --_button-hover-font-color: var(--button-hover-font-color, var(--_button-font-color));
+    --_icon-size: 50px;
 
+    position: relative;
     width: fit-content;
     display: flex;
     align-items: center;
@@ -100,10 +102,12 @@ h2 {
     img {
         opacity: 1;
         z-index: 10;
-        width: 50px;
-        transform: rotate(-15deg) translate(25px, 5px);
+        width: var(--_icon-size);
+        position: absolute;
+        top: 50%;
+        translate: calc(var(--_icon-size) / 2 - 50%) -50%;
+        rotate: z -15deg;
         transition: all 0.2s ease-in-out;
-        filter: drop-shadow(0px 0px rgba(255, 255, 255, 1));
     }
 
     :is(button, a) {
@@ -113,6 +117,7 @@ h2 {
         cursor: pointer;
         border: var(--black);
         padding: 10px 35px;
+        margin-left: calc(var(--_icon-size) / 2);
         font-family: var(--font-title);
         font-weight: 600;
         color: var(--_button-font-color);;
@@ -124,13 +129,12 @@ h2 {
 
     &:hover {
         img {
-            transform: rotate(-10deg) translate(25px, 5px) scale(1.1);
-            transition: transform 0.2s;
+            rotate: z -10deg;
+            scale: 1.1;
+            transform: translate(1px, 1px);
         }
 
         :is(button, a) {
-            /* background-color: var(--yellow);
-            color: var(--white); */
             transform: scale(1.05);
             color: var(--_button-hover-font-color);
             background-color: var(--_button-hover-background-color);
@@ -141,7 +145,7 @@ h2 {
 
 .hero-buttons{
     display: flex;
-    gap: 20px;
+    gap: 40px;
     justify-content: center;
     margin-top: 20px;
 }
